# platanus-build-night-26-ba-danrambado

./: .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  init-letsencrypt.sh
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml  seed.py
backend/app/: config.py
backend/app/adapters/ai/: anthropic_adapter.py
backend/app/adapters/embeddings/: chroma_adapter.py
backend/app/adapters/persistence/: connection_repo.py  connection_request_repo.py  database.py  feedback_repo.py  match_repo.py  models.py  opportunity_repo.py  session_repo.py  user_repo.py
backend/app/api/: app.py  dependencies.py  schemas.py
backend/app/api/routes/: auth.py  connection_requests.py  feedback.py  opportunities.py  users.py
backend/app/core/: entities.py  enums.py
backend/app/ports/: ai_port.py  embedding_port.py  repositories.py
backend/app/services/: matching_service.py  opportunity_service.py  reputation_service.py  user_service.py
backend/tests/: conftest.py  test_matching_service.py  test_opportunities.py  test_users.py
frontend/: Dockerfile
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/network/: page.tsx
frontend/src/app/opportunities/: page.tsx
frontend/src/app/profiles/: page.tsx
frontend/src/components/: feedback-form.tsx  match-card.tsx  nav-bar.tsx  network-badge.tsx  opportunity-card.tsx  profile-card.tsx  request-card.tsx  user-picker.tsx  voice-input.tsx
frontend/src/hooks/: use-current-user.tsx
frontend/src/lib/: api.ts  types.ts
nginx/conf.d/: app.conf
(+4 files in other folders)
